// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MacroNoResults /> should display no macros available without search query 1`] = `
<div
  class="no-result-container"
>
  <p>
    <span>
      You don't have any macros yet
    </span>
  </p>
  <button
    class="wrapper primary medium"
    type="button"
  >
    <span
      class="wrapper"
    >
      <i
        class="material-icons icon isLeft medium"
      >
        add
      </i>
      Create a new macro
    </span>
  </button>
</div>
`;

exports[`<MacroNoResults /> should display no macros found with search query 1`] = `
<div
  class="no-result-container"
>
  <p>
    <span>
      No macros found
    </span>
  </p>
  <button
    class="wrapper primary medium"
    type="button"
  >
    <span
      class="wrapper"
    >
      <i
        class="material-icons icon isLeft medium"
      >
        add
      </i>
      Create a new macro
    </span>
  </button>
</div>
`;
